--- a/settings.ini
+++ b/settings.ini
@@ -6,12 +6,12 @@ lib_name = nbdev_template
 # repo_name = analytics
 # company_name = nike
 
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+user = hadisotudeh
+description = A football analytics book
+keywords = football analyze 
+author = Hadi Sotudeh
+author_email = hadisotudeh1992@gmail.com
+copyright = Hadi Sotudeh
 branch = master
 version = 0.0.1
 min_python = 3.6
